# leader_words_test_paper

./: .gitignore  REFACTORING_SUMMARY.md  UV_USAGE.md  app.py  application.py  build_gui.bat  exceptions.py  from-text-to-cfg-spec.md  gui.py  gui_manager.py  interfaces.py  models.py  pyproject.toml  readme.md  run.py  services.py  variables.py  亂數題目機.ipynb
.github/: copilot-instructions.md
cfg-202407/: 1A-P11.json  1A-P13.json  1A-P14.json  1A-P16.json  1A-P5.json  1A-P5A.json  1A-P6.json  1A-P8A.json  1A-P9.json  ALP10.json  ALP12.json  ALP14.json  ALP16.json  ALP5.json  ALP6.json  ALP7.json  ALP8A.json  ALP9.json  ALP9A.json
cfg-202502/: 1A-P10.json  1A-P8.json  1A-P9.json  1A-p1.json  1A-p11.json  1A-p12.json  1A-p13.json  1A-p14.json  1A-p15.json  1A-p16.json  1A-p2.json  1A-p3.json  1A-p4.json  1A-p6.json  1A-p7.json  AL-P10.json  AL-P11.json  AL-P12.json  AL-P13.json  AL-P14.json  AL-P15.json  AL-P16.json  AL-P8.json  AL-P9.json  AL-p1.json  AL-p2.json  AL-p3.json  AL-p4.json  AL-p6.json  AL-p7.json
cfg-202509/: 2A-p01.json  2A-p02.json  2A-p03.json  2A-p04.json  2A-p05.json  2A-p06.json  2A-p07.json  2A-p08.json  2A-p09.json  2A-p1.json  2A-p10.json  2A-p11.json  2A-p12.json  2A-p13.json  2A-p14.json  2A-p15.json  2A-p16.json  AL-p02.json  AL-p03.json  AL-p03A.json  AL-p04.json  AL-p05.json  AL-p06.json  AL-p07.json  AL-p08.json  AL-p09.json  AL-p1.json  AL-p10.json  AL-p11.json  AL-p12.json  AL-p13.json  AL-p14.json  AL-p15.json  AL-p16.json
cfg-202602/: 2A-p01.json  2A-p02.json  2A-p03.json  2A-p04.json  2A-p05.json  2A-p06.json  2A-p07.json  2A-p08.json  (+24 more)
(+31 files in other folders)
